Fix T62491: Wrong tooltip for lock/unlock strips